--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <title>Web Color Typer</title>
   
   <link rel="manifest" href="/manifest.webmanifest">
-  <meta name="theme-color" content="#000000"/>
+  <meta name="theme-color" content="#ffffff"/>
 
   <link rel="stylesheet" href="/css/modern-normalize.css">
   <link rel="stylesheet" href="/css/main.css">
