--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,12 @@
         <a href="https://github.com/techaurelian/webcolortyper" target="_blank" rel="noopener">Web Color Typer</a>
       </h1>
       <!-- <button id="close-typer" type="button" class="appl-button--close" aria-label="Close">&times;</button> -->
-      <button id="close-typer" type="button" class="appl-button--close" aria-label="Close"></button>
+      <button id="close-typer" type="button" class="appl-button--close" aria-label="Close">
+        <svg class="appl-button__icon--close" viewBox="0 0 32 32" aria-hidden="true">
+          <!-- <path d="M16 0c-8.836 0-16 7.164-16 16s7.164 16 16 16 16-7.164 16-16-7.164-16-16-16zM23.914 21.086l-2.828 2.828-5.086-5.086-5.086 5.086-2.828-2.828 5.086-5.086-5.086-5.086 2.828-2.828 5.086 5.086 5.086-5.086 2.828 2.828-5.086 5.086 5.086 5.086z"></path> -->
+          <path d="M30.721 6.774l-9.197 9.253 9.197 9.198c0.385 0.384 0.385 1.007 0 1.392l-4.176 4.175c-0.383 0.385-1.006 0.385-1.391 0l-9.182-9.182-9.127 9.182c-0.384 0.385-1.007 0.385-1.392 0l-4.175-4.175c-0.384-0.385-0.384-1.008 0-1.392l9.127-9.182-9.126-9.126c-0.384-0.384-0.384-1.007 0-1.392l4.175-4.175c0.384-0.385 1.007-0.385 1.392 0l9.11 9.11 9.199-9.253c0.385-0.385 1.008-0.385 1.391 0l4.176 4.175c0.383 0.385 0.383 1.008-0.001 1.392z"></path>
+        </svg>
+      </button>
     </div>
     <div class="appl-main__body">
       <input type="text" id="color-input" class="appl-color-input" spellcheck="false" aria-label="Color name or code"
