Update icons, add meta description

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Web Color Typer</title>
+  <meta name="Description" content="Try web colors by typing their name, hex code, rgb triplet, and more. Install the PWA on your device and get an instant color window or fullscreen for various purposes.">
   
   <link rel="manifest" href="/manifest.webmanifest">
   <meta name="theme-color" content="#ffffff"/>
+  <link rel="apple-touch-icon" href="/img/manifest/webcolortyper-icon-192x192.png">
 
   <link rel="stylesheet" href="/css/modern-normalize.css">
   <link rel="stylesheet" href="/css/main.css">
